--- a/index.html
+++ b/index.html
@@ -10,8 +10,25 @@
 <body>
     <div class="menu-container"></div>
     <div class="formula-container"></div>
-    <div class="grid-container"></div>
-    <div class="sheets-container"></div>    
+    <div class="grid-container">
+        <div class="lefttopbox"></div>
+        <div class="firstcol">
+
+        </div>
+        <div class="firstrow"> </div>
+        <div class="grid"></div>
+
+
+    </div>
+    <div class="sheets-container">
+        <div class="addbutton">
+            <button id="addsheet">+</button>
+        </div>
+        <div class="sheetspace">
+            <div class="sheetno active" idx="1">sheet1</div>
+        </div>
+    </div>    
     
 </body>
+<script src="script.js"></script>
 </html>
