--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <div id="bottommenu">
             <select name="" id="fontsize">
                 <option value="8">8</option>
-                <option value="10">10</option>
-                <option value="12">12</option>
-                <option value="14">14</option>
+                <option value="12" selected>12</option>
+                <option value="16">16</option>
+                <option value="20">20</option>
             </select>
             <select name="" id="fontstyle">
                 <option value="monospace">monospace</option>
@@ -29,23 +29,23 @@
                 <span id="span1" class="material-icons  ">
                     format_bold
                     </span>
-                <span id="span2"class="material-icons iconactive">
+                <span id="span2"class="material-icons ">
                     format_underlined
                 </span>
-                <span id="3span"class="material-icons iconactive">
+                <span id="span3"class="material-icons ">
                     format_italic
                 </span>
             </div>
             <div id="align">
-                <span class="material-icons iconactive">
+                <span class="material-icons " id="left">
                     format_align_left
-                    </span>
-                    <span class="material-icons">
-                        format_align_center
-                        </span>
-                        <span class="material-icons">
-                            format_align_right
-                            </span>
+                </span>
+                <span class="material-icons" id="center">
+                    format_align_center
+                </span>
+                <span class="material-icons" id="right">
+                    format_align_right
+                </span>
                 
 
             </div>
