not completed the formula 2

--- a/index.html
+++ b/index.html
@@ -11,7 +11,18 @@
 </head>
 <body>
     <div class="menu-container">
-        <div id="topmenu"></div>
+        <div id="topmenu">
+        <span class="material-icons upload">
+        add       
+        </span>
+        <span class="material-icons download">
+            file_download
+        </span>
+        <span class="material-icons open">
+            folder_open
+        </span>
+        </div>
+        <hr>
         <div id="bottommenu">
             <select name="" id="fontsize">
                 <option value="8">8</option>
