before multiple sheets , implemented font family

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400&family=Roboto:wght@400&family=Scheherazade+New&display=swap"" rel="stylesheet">
 </head>
 <body>
     <div class="menu-container">
@@ -31,10 +32,13 @@
                 <option value="20">20</option>
             </select>
             <select name="" id="fontstyle">
-                <option value="monospace">monospace</option>
-                <option value="sans-sherif">sans-sherif</option>
-                <option value="georgia">georgia</option>
-                <option value="fantasy">fantasy</option>
+                <option value="Serif">Serif</option>
+                <option value="Sans-seriff" selected>Sans-sherif</option>
+                <option value="Monospace">Monospace</option>
+                <option value="Cursive">Cursive</option>
+                <option value="Montserrat">Montserrat</option>
+                <option value="Roboto">Roboto</option>
+                <option value="Scheherazade New">New</option>
             </select>
             <div id="bui">
                 <span id="span1" class="material-icons  ">
