added multiple sheets database and customised icons and done some styling

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </select>
             <select name="" id="fontstyle">
                 <option value="Serif">Serif</option>
-                <option value="Sans-seriff" selected>Sans-sherif</option>
+                <option value="Sans-seriff" selected>Sans-seriff</option>
                 <option value="Monospace">Monospace</option>
                 <option value="Cursive">Cursive</option>
                 <option value="Montserrat">Montserrat</option>
